# omegaquad

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/shaders/: standard.frag  standard.vert
assets/sounds/title/: jingle.flp
assets/textures/logo/: banner.aseprite
assets/textures/title/: loading.aseprite
src/: assets.rs  boilerplates.rs  controls.rs  drawutils.rs  main.rs  wasm_random_impl.rs
src/assets/: mod.rs
src/modes/: mod.rs
src/modes/example/: mod.rs
src/modes/logo/: mod.rs
src/utils/: button.rs  draw.rs  mod.rs  profile.rs  serdeflate.rs
src/utils/text/: billboard.rs  mod.rs
web_release/: Makefile  index.html
