[package]
name = "omegaquad"
version = "0.1.0"
authors = ["gamma-delta <29877714+gamma-delta@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.4"
once_cell = "1.7.2"

rand = { version = "0.8.3" }
quad-rand = { version = "0.2.1", features = ["rand"] }
getrandom = { version = "0.2.2", features = ["custom"] }

crossbeam = { version = "0.8.0", optional = true }
cogs-gamedev = "0.1.12"
enum-map = "1.0.0"

[features]
default = ["thread_loop"]

thread_loop = ["crossbeam"]
