[package]
name = "omegaquad"
version = "0.1.0"
authors = ["gamma-delta <29877714+gamma-delta@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core game engine stuff
macroquad = "0.3.4"
cogs-gamedev = "*"
quad-wasmnastics = "*"

crossbeam = { version = "0.8.0", optional = true }
enum_dispatch = "0.3.7"

# Other stuff required for things to work
enum-map = "1.0.0"
once_cell = "1.7.2"

bincode = "1.3.3"
serde = { version = "1.0.126", features = ["derive"] }

rand = { version = "0.8.3" }
quad-rand = { version = "0.2.1", features = ["rand"] }
getrandom = { version = "0.2.2", features = ["custom"] }

# Bonus things I seem to use all the time
anyhow = "1.0.40"
regex = "1.5.4"
itertools = "0.10.1"

[features]
default = ["thread_loop"]

thread_loop = ["crossbeam"]
